--- a/server/views/about.ejs
+++ b/server/views/about.ejs
@@ -1,8 +1,7 @@
+<!-- about.ejs, Egor, Student # 301179880, 10/23/2022 -->
+
 <%- include partials/header.ejs%>
 <%- include partials/main_nav.ejs%>
-
-
-
 
 <link rel="shortcut icon" type="image/x-icon" href="/Assets/images/favicon.ico">
 
