--- a/server/views/contacts.ejs
+++ b/server/views/contacts.ejs
@@ -1,41 +1,7 @@
+<!-- contact.ejs, Egor, Student # 301179880, 10/23/2022 -->
+
 <%- include partials/header.ejs%>
 <%- include partials/main_nav.ejs%>
-
-<!-- <main class="container bg-light text-dark p-5">
-  <div class="container bg-light p-5">
-  <h5 class="display-4">You can contact me through email or by submitting the following form</h1>
-  <div class="card">
-  <div class="card-body">
-    Email: awasjomail@gmail.com
-  </div>
-</div>
-<br><br><br><br>
-<div class="form-floating mb-3">
-  <input type="text" class="form-control" id="floatingInput" placeholder="first name">
-  <label for="floatingInput">First Name</label>
-</div>
-<div class="form-floating mb-3">
-  <input type="text" class="form-control" id="floatingInput" placeholder="last name">
-  <label for="floatingInput">Last Name</label>
-</div>
-<div class="form-floating mb-3">
-  <input type="tel" class="form-control" id="floatingInput" placeholder="667-788-9966">
-  <label for="floatingInput">Phone Number</label>
-</div>
-<div class="form-floating mb-3">
-  <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-  <label for="floatingInput">Email address</label>
-</div>
-<div class="form-floating mb-3">
-  <textarea type="text" class="form-control" id="floatingInput" placeholder="message..."></textarea>
-  <label for="floatingInput">Message...</label>
-</div>
-<button type="submit" class="btn btn-primary"><i class="fas fa-edit"></i>Submit</button>
-<a href="home" class="btn btn-warning"><i class="fas fa-undo"></i>Cancel</a>
-  </div>
-</main> -->
-
-
 
 <link rel="shortcut icon" type="image/x-icon" href="/Assets/images/favicon.ico">
   
