--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -1,15 +1,7 @@
+<!-- index.ejs, Egor, Student # 301179880, 10/23/2022 -->
+
 <%- include partials/header.ejs%>
 <%- include partials/main_nav.ejs%>
-
-<!-- <main class="container bg-light text-dark p-5">
-  <div class="container bg-light p-5">
-  <h5 class="display-4">Welcome to the <%= title %> page</h5>
-  <p class="display-6">Get to know <a href="/about" class="a-link">me</a> more</p>
-  <blockquote class="blockquote">
-    <p class="mb-0">Innovative design with the latest Technologies.</p>
-  </blockquote>
-  </div>
-</main> -->
 
   <!-- logo -->
   <link rel="shortcut icon" type="image/x-icon" href="/Assets/images/favicon.ico">
