--- a/server/views/services.ejs
+++ b/server/views/services.ejs
@@ -1,35 +1,7 @@
+<!-- services.ejs, Egor, Student # 301179880, 10/23/2022 -->
+
 <%- include partials/header.ejs%>
 <%- include partials/main_nav.ejs%>
-
-<!-- <main class="container bg-light text-dark p-5">
-  <div class="container bg-light p-5">
-  <h5 class="display-6"><%= title %> include but are not limited to </h5>
-  </div>
-  <div class="card-group">
-  <div class="card">
-    <img src="/Assets/images/OOP.png" class="card-img-top" alt="Object Oriented Programming">
-    <div class="card-body">
-      <h5 class="card-title">Object Oriented Programming (OOP)</h5>
-      <p class="card-text">I know several langauges with that use the OOP methodolgy, for example: C#, Java, and JavaScript</p>
-    </div>
-  </div>
-  <div class="card">
-    <img src="Assets/images/database.png" class="card-img-top" alt="Databases">
-    <div class="card-body">
-      <h5 class="card-title">Database</h5>
-      <p class="card-text">I am proficient in Sequence Query Language (SQL) and also Procedural Language / Sequence Query Language (PL/SQL). I mainly use Oracle SQL Developper</p>
-    </div>
-  </div>
-  <div class="card">
-    <img src="Assets/images/agile.png" class="card-img-top" alt="Agile Methodology">
-    <div class="card-body">
-      <h5 class="card-title">Agile Methodology</h5>
-      <p class="card-text">Well versed in the Agile Methodology, I have applied this methodology to multiple projects throughout my projects.</p>
-    </div>
-  </div>
-</div>
-</main> -->
-
 
 
 <link rel="shortcut icon" type="image/x-icon" href="/Assets/images/favicon.ico">
@@ -70,9 +42,5 @@
             <!-- services page, link to projects page-->
         <center><a href="/projects" id="redirect2Proj">Click here to see some of my projects</a></center>
 
-
-
-
 <%- include partials/bottom_nav.ejs%>
-
 <%- include partials/footer.ejs%>
