--- a/server/views/contact/add.ejs
+++ b/server/views/contact/add.ejs
@@ -1,3 +1,6 @@
+<!-- add.ejs, Egor, Student # 301179880, 10/23/2022 -->
+
+
 <%- include ../partials/header.ejs%>
 <%- include ../partials/main_nav.ejs%>
 
