--- a/server/views/contact/edit.ejs
+++ b/server/views/contact/edit.ejs
@@ -1,3 +1,5 @@
+<!-- edit.ejs, Egor, Student # 301179880, 10/23/2022 -->
+
 <%- include ../partials/header.ejs%>
 <%- include ../partials/main_nav.ejs%>
 
