--- a/server/views/partials/main_nav.ejs
+++ b/server/views/partials/main_nav.ejs
@@ -66,6 +66,8 @@
                     <% } %>           
                     </li> 
 
+                   <li style="width: 20em;"></li>
+
         <% if(typeof displayName == 'string' && displayName) { %>
             <li class="navbar-text"><i class="fas fa-lg fa-user"></i> Welcome, <%= displayName %></li>
             <li class="nav-item"><a href="/logout" class="nav-link">
