--- a/server/views/projects.ejs
+++ b/server/views/projects.ejs
@@ -1,52 +1,7 @@
+<!-- projects.ejs, Egor, Student # 301179880, 10/23/2022 -->
+
 <%- include partials/header.ejs%>
 <%- include partials/main_nav.ejs%>
-
-
-<!-- <main class="container bg-light text-dark p-5">
-  <h5 class="display-4">Welcome to the <%= title %> page</h5>
-<div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active" data-bs-interval="10000">
-      <img src="/Assets/images/sem_2_erd.png" class="d-block w-100" alt="Entity Relational Diagram">
-      <div class="carousel-caption d-none d-md-block bg-dark text-light" style="opacity:0.89;">
-        <h5>Project 1: Database creation </h5>
-        <p >Created a database for a fictional clothing store, here you see an Entity-Relational Diagram that is from Oracle SQL Developper</p>
-      </div>
-    </div>
-    <div class="carousel-item" data-bs-interval="2000">
-      <img src="/Assets/images/Client_Side_Web_Dev.png" class="d-block w-100" alt="Toronto's weather on October 9 2022, 3:20 am">
-      <div class="carousel-caption d-none d-md-block bg-dark text-light" style="opacity:0.89;">
-        <h5>Project 2: Client Side Web Development</h5>
-        <p>Created JavaScript responsive web pages, for more exmaples please visit my <a href="http://studentweb.cencol.ca/ajomail/Comp125/index.html"
-        class="a-link" target="blank">work</a>.</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="/Assets/images/CookUp-ERD.png" class="d-block w-100" alt="Cook up Application ERD">
-      <div class="carousel-caption d-none d-md-block bg-dark text-light" style="opacity:0.89;" >
-        <h5>Project 3: Database</h5>
-        <p>This is another database project for Software System Design. The main purpose is for the user to input their inngredients on hand to have recipes suggested to them.</p>
-      </div>
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
-</main> -->
-
-
-
 
 <link rel="shortcut icon" type="image/x-icon" href="/Assets/images/favicon.ico">
   
@@ -77,11 +32,5 @@
    <img id="workMain_img"  alt="Work_Main" src="/Assets/images/screen_workMain.jpg"/>
   </a></center>
 
-
-
-
-
-
 <%- include partials/bottom_nav.ejs%>
-
 <%- include partials/footer.ejs%>
